fix: 🐛 add clear: both for headings on mobile devices

--- a/resources/skins.citizen.styles/skinning/content.body.less
+++ b/resources/skins.citizen.styles/skinning/content.body.less
@@ -28,3 +28,16 @@
 		}
 	}
 }
+
+@media ( max-width: @width-breakpoint-mobile ) {
+	.skin-citizen .mw-body-content {
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
+			clear: both;
+		}
+	}
+}
